Integration plugins for Trace Compass and DSF
Change-Id: I59b5065f123f67dd7f8ac87a8f08016cc1fa0430
Signed-off-by: Marc Khouzam <marc.khouzam@ericsson.com>

--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,7 @@
     <module>org.eclipse.tracecompass.ctf.core.tests</module>
     <module>org.eclipse.tracecompass.ctf.parser</module>
     <module>org.eclipse.tracecompass.ctf.parser.tests</module>
+    <module>org.eclipse.tracecompass.dsf.core</module>
 
     <module>org.eclipse.tracecompass.pcap.core</module>
     <module>org.eclipse.tracecompass.pcap.core.tests</module>
