--- a/tmf/org.eclipse.tracecompass.tmf.ui/plugin.properties
+++ b/tmf/org.eclipse.tracecompass.tmf.ui/plugin.properties
@@ -212,3 +212,6 @@ commands.uml2sd.showstart = Show node start
 commands.uml2sd.showstart.description = Show the node start
 
 commands.sync.refresh.tracecontent = Refresh
+
+menu.sync.files = Sync Files
+menu.sync.files.mnemonic = y
