Add other handlers, timer loader selection dialog
Change-Id: Ie098c1a8565c0cc4dce17abc96dd6fbef16e76ee
Signed-off-by: Marc-Andre Laperle <marc-andre.laperle@ericsson.com>

--- a/tmf/org.eclipse.tracecompass.tmf.ui/plugin.properties
+++ b/tmf/org.eclipse.tracecompass.tmf.ui/plugin.properties
@@ -215,3 +215,9 @@ commands.sync.refresh.tracecontent = Refresh
 
 menu.sync.files = Sync Files
 menu.sync.files.mnemonic = y
+
+commands.sync.loadincreasing = Load Increasing
+commands.sync.loadincreasing.description = Load the content of the trace since the last time it was opened or loaded.
+
+commands.sync.timerloading = Timer Loading
+commands.sync.timerloading.description = Load the content of the trace periodically
