--- a/rcp/org.eclipse.tracecompass.rcp.tests/.project
+++ b/rcp/org.eclipse.tracecompass.rcp.tests/.project
@@ -27,4 +27,15 @@
 	<natures>
 		<nature>org.eclipse.rcptt.core.rcpttnature</nature>
 	</natures>
+	<filteredResources>
+		<filter>
+			<id>1449614644246</id>
+			<name></name>
+			<type>10</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-target</arguments>
+			</matcher>
+		</filter>
+	</filteredResources>
 </projectDescription>
