--- a/rcp/org.eclipse.tracecompass.rcp.tests/pom.xml
+++ b/rcp/org.eclipse.tracecompass.rcp.tests/pom.xml
@@ -26,27 +26,26 @@
 
 	<packaging>rcpttTest</packaging>
 
-	<!-- Change properies below to your values -->
 	<properties>
-		<dataPath>${project.basedir}/../../ctf/org.eclipse.tracecompass.ctf.core.tests/traces/synctraces.tar.gz</dataPath>
-		<!--<dataPath>${maven.dependency.org.eclipse.tracecompass.testtraces.tracecompass-test-traces-ctf.jar.path}</dataPath>-->
+		<dataPath>${project.build.directory}/dependency/tracecompass-test-traces-ctf-jar</dataPath>
+		<!-- Overridden by profile on Windows -->
 		<aut.extension>tar.gz</aut.extension>
 	</properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>org.eclipse.tracecompass.testtraces</groupId>
-      <artifactId>tracecompass-test-traces-ctf</artifactId>
-      <version>1.1.1</version>
-    </dependency>
-  </dependencies>
-<repositories>
-    <repository>
-      <id>trace-compass-test-traces</id>
-      <name>Trace Compass Test Traces</name>
-      <url>http://archive.eclipse.org/tracecompass/tracecompass-test-traces/maven</url>
-    </repository>
-  </repositories>
+	<dependencies>
+		<dependency>
+			<groupId>org.eclipse.tracecompass.testtraces</groupId>
+			<artifactId>tracecompass-test-traces-ctf</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+	</dependencies>
+	<repositories>
+		<repository>
+			<id>trace-compass-test-traces</id>
+			<name>Trace Compass Test Traces</name>
+			<url>http://archive.eclipse.org/tracecompass/tracecompass-test-traces/maven</url>
+		</repository>
+	</repositories>
 
 	<profiles>
 		<profile>
@@ -64,22 +63,27 @@
 
 	<build>
 		<plugins>
-<!--<plugin>
-        <artifactId>maven-antrun-plugin</artifactId>
-        <executions>
-          <execution>
-            <phase>generate-resources</phase>
-            <configuration>
-              <tasks>
-                <echo>${dataPath}</echo>
-              </tasks>
-            </configuration>
-            <goals>
-              <goal>run</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>-->
+			<!--  This copies and extracts the test traces jar to the target/dependency folder -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>2.10</version>
+				<executions>
+					<execution>
+						<id>unpack-dependencies</id>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>unpack-dependencies</goal>
+						</goals>
+						<configuration>
+							<useSubDirectoryPerArtifact>true</useSubDirectoryPerArtifact>
+							<stripVersion>true</stripVersion>
+							<stripClassifier>true</stripClassifier>
+							<excludeTransitive>true</excludeTransitive>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.eclipse.rcptt</groupId>
 				<artifactId>rcptt-maven-plugin</artifactId>
@@ -91,11 +95,11 @@
 						<artifactId>tracing</artifactId>
 						<extension>${aut.extension}</extension>
 
-						<vmArgs> 
-							<vmArg>-Xmx1536m</vmArg>  
-							<vmArg>-XX:MaxPermSize=256m</vmArg> 
+						<vmArgs>
+							<vmArg>-Xmx1536m</vmArg>
+							<vmArg>-XX:MaxPermSize=256m</vmArg>
 							<vmArg>-DdataPath=${dataPath}</vmArg>
-						</vmArgs> 
+						</vmArgs>
 					</aut>
 					<runner>
 						<version>2.1.0-SNAPSHOT</version>
