Use workspace relative paths
Change-Id: I89db89e05b89f6233f5e079f9e599a3199351f79
Signed-off-by: Marc-Andre Laperle <marc-andre.laperle@ericsson.com>

--- a/rcp/org.eclipse.tracecompass.rcp.tests/.project
+++ b/rcp/org.eclipse.tracecompass.rcp.tests/.project
@@ -16,12 +16,21 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1449615992914</id>
+			<id>1449616579192</id>
 			<name>target</name>
 			<type>9</type>
 			<matcher>
 				<id>org.eclipse.ui.ide.multiFilter</id>
 				<arguments>1.0-name-matches-false-false-dependency</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1449616579195</id>
+			<name>target</name>
+			<type>9</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-aut</arguments>
 			</matcher>
 		</filter>
 	</filteredResources>
